--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -11,13 +11,23 @@
         <action
             android:id="@+id/action_deckListFragment_To_AddToCollectionPagerFragment"
             app:destination="@id/addToCollectionPagerFragment" />
+        <action
+            android:id="@+id/action_deckListFragment_to_testFragment2"
+            app:destination="@id/testFragment2" />
+        <action
+            android:id="@+id/action_deckListFragment_to_addCardFragment"
+            app:destination="@id/addCardFragment" />
     </fragment>
     <fragment
         android:id="@+id/addToCollectionPagerFragment"
         android:name="com.example.flashcards.ui.AddToCollectionPagerFragment"
-        android:label="AddToCollectionPagerFragment" >
-        <action
-            android:id="@+id/action_addToCollectionPagerFragment_to_deckListFragment"
-            app:destination="@id/deckListFragment" />
-    </fragment>
+        android:label="AddToCollectionPagerFragment" />
+    <fragment
+        android:id="@+id/testFragment2"
+        android:name="com.example.flashcards.ui.TestFragment"
+        android:label="TestFragment" />
+    <fragment
+        android:id="@+id/addCardFragment"
+        android:name="com.example.flashcards.ui.AddCardFragment"
+        android:label="AddCardFragment" />
 </navigation>
