--- a/app/src/main/res/layout/fragment_deck_list.xml
+++ b/app/src/main/res/layout/fragment_deck_list.xml
@@ -30,6 +30,27 @@
         android:layout_gravity="center"/>
 
     <Button
+        android:id="@+id/viewDeckBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="To view deck fragment"
+        android:layout_gravity="center"/>
+
+    <Button
+        android:id="@+id/viewFrontSideBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="To front side fragment"
+        android:layout_gravity="center"/>
+
+    <Button
+        android:id="@+id/viewBackSideBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="To back side fragment"
+        android:layout_gravity="center"/>
+
+    <Button
         android:id="@+id/testBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
