--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -17,6 +17,15 @@
         <action
             android:id="@+id/action_deckListFragment_to_addCardFragment"
             app:destination="@id/addCardFragment" />
+        <action
+            android:id="@+id/action_deckListFragment_to_viewDeckFragment"
+            app:destination="@id/viewDeckFragment" />
+        <action
+            android:id="@+id/action_deckListFragment_to_cardFrontSideFragment"
+            app:destination="@id/cardFrontSideFragment" />
+        <action
+            android:id="@+id/action_deckListFragment_to_cardBackSideFragment"
+            app:destination="@id/cardBackSideFragment" />
     </fragment>
     <fragment
         android:id="@+id/addToCollectionPagerFragment"
@@ -30,4 +39,16 @@
         android:id="@+id/addCardFragment"
         android:name="com.example.flashcards.ui.AddCardFragment"
         android:label="AddCardFragment" />
+    <fragment
+        android:id="@+id/viewDeckFragment"
+        android:name="com.example.flashcards.ui.ViewDeckFragment"
+        android:label="ViewDeckFragment" />
+    <fragment
+        android:id="@+id/cardFrontSideFragment"
+        android:name="com.example.flashcards.ui.CardFrontSideFragment"
+        android:label="CardFrontSideFragment" />
+    <fragment
+        android:id="@+id/cardBackSideFragment"
+        android:name="com.example.flashcards.ui.CardBackSideFragment"
+        android:label="CardBackSideFragment" />
 </navigation>
