--- a/app/src/main/res/layout/fragment_deck_details.xml
+++ b/app/src/main/res/layout/fragment_deck_details.xml
@@ -25,6 +25,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <TextView
+        android:id="@+id/deck_details_deck_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Deck name"
