--- a/app/src/main/res/layout/fragment_deck_details.xml
+++ b/app/src/main/res/layout/fragment_deck_details.xml
@@ -114,7 +114,7 @@
             android:layout_margin="4dp"/>
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/deck_details_edit_deck_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Edit"
