--- a/app/src/main/res/layout/item_deck.xml
+++ b/app/src/main/res/layout/item_deck.xml
@@ -1,15 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/item_deck_title"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="74dp"
+        android:padding="8dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginBottom="6dp"
+        android:layout_marginRight="4dp"
         android:layout_marginLeft="4dp"
-        android:text="Deck Title"
-        android:gravity="center"
-        android:layout_gravity="center"/>
+        app:cardElevation="4dp"
+        app:cardCornerRadius="8dp"
+        android:foreground="?android:attr/selectableItemBackground"
+        >
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <LinearLayout
+                android:layout_width="8dp"
+                android:layout_height="match_parent"
+                android:background="@color/s_red"/>
+
+            <TextView
+                android:id="@+id/item_deck_title"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Deck Title"
+                android:gravity="start|center"
+                android:layout_gravity="center"
+                android:textSize="18sp"
+                android:layout_marginLeft="8dp"/>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
